--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -4,50 +4,30 @@
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
-    "format": "prettier --write \"**/*.ts\"",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "nodemon",
-    "prestart:prod": "rm -rf dist && tsc",
-    "start:prod": "node dist/main.js",
-    "test": "jest",
-    "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "start": "ts-node src/main.ts",
+    "prestart:prod": "tsc",
+    "start:prod": "node dist/main.js"
   },
   "dependencies": {
-    "@nestjs/common": "^4.5.9",
-    "@nestjs/core": "^4.5.10",
-    "@nestjs/microservices": "^4.5.8",
-    "@nestjs/testing": "^4.5.5",
-    "@nestjs/websockets": "^4.5.8",
-    "reflect-metadata": "^0.1.12",
+    "@nestjs/common": "^5.0.0-beta.3",
+    "@nestjs/core": "^5.0.0-beta.3",
+    "grpc": "^1.10.1",
+    "mqtt": "^2.17.0",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
+    "redis": "^2.7.1",
+    "reflect-metadata": "^0.1.10",
     "rxjs": "^5.5.6",
-    "typescript": "^2.6.2"
+    "typescript": "^2.8.1"
   },
   "devDependencies": {
-    "@types/express": "^4.0.39",
-    "@types/jest": "^21.1.8",
-    "@types/node": "^9.3.0",
-    "@types/supertest": "^2.0.4",
-    "jest": "^21.2.1",
-    "nodemon": "^1.14.1",
-    "prettier": "^1.11.1",
+    "@types/jest": "^20.0.8",
+    "@types/node": "^7.0.41",
+    "jest": "^20.0.4",
     "supertest": "^3.0.0",
-    "ts-jest": "^21.2.4",
-    "ts-node": "^4.1.0",
-    "tsconfig-paths": "^3.1.1",
-    "tslint": "5.3.2"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "../coverage"
+    "ts-jest": "^20.0.14",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.9.1"
   }
 }
