--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -7,7 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.3.1",
+    "react": "^16.3.2",
     "react-native": "0.55.3"
   },
   "devDependencies": {
