--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -14,6 +14,7 @@
     "babel-jest": "22.4.3",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.3",
+    "react-native-debugger-open": "^0.3.17",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
