--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -11,7 +11,8 @@
     "start:prod": "node dist/main.js",
     "test": "jest",
     "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "lint": "tslint -c tslint.json \"src/**/*.ts\" -e \"*.spec.ts\" --project tsconfig.json --type-check"
   },
   "dependencies": {
     "@nestjs/common": "^5.0.0-rc.3",
