--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -21,6 +21,7 @@
     "class-validator": "^0.8.5",
     "grpc": "^1.10.1",
     "mongoose": "^5.0.1",
+    "mongoose-unique-validator": "^2.0.1",
     "mqtt": "^2.17.0",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
@@ -35,6 +36,7 @@
     "@types/jest": "^21.1.8",
     "@types/lodash": "^4.14.108",
     "@types/mongoose": "^4.7.23",
+    "@types/mongoose-unique-validator": "^1.0.1",
     "@types/node": "^9.6.14",
     "@types/supertest": "^2.0.4",
     "@types/ws": "^5.1.1",
