--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -18,6 +18,8 @@
     "@nestjs/common": "^5.0.0-rc.3",
     "@nestjs/core": "^5.0.0-rc.3",
     "@nestjs/mongoose": "^3.0.1",
+    "@nestjs/passport": "^1.0.6",
+    "bcrypt": "^2.0.1",
     "class-validator": "^0.8.5",
     "grpc": "^1.10.1",
     "mongoose": "^5.0.1",
@@ -32,6 +34,7 @@
     "typescript": "^2.8.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^2.0.0",
     "@types/express": "^4.0.39",
     "@types/jest": "^21.1.8",
     "@types/lodash": "^4.14.108",
