--- a/API.Points/tsconfig.json
+++ b/API.Points/tsconfig.json
@@ -13,5 +13,5 @@
     "outDir": "./dist"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts"],
 }
