--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -4,65 +4,43 @@
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
-    "format": "prettier --write \"**/*.ts\"",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "nodemon",
-    "prestart:prod": "rm -rf dist && tsc",
+    "start": "ts-node src/main.ts",
+    "prestart:prod": "tsc",
     "start:prod": "node dist/main.js",
-    "test": "jest",
-    "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "lint": "tslint -c tslint.json \"src/**/*.ts\" -e \"*.spec.ts\" --project tsconfig.json --type-check"
+    "test": "jest --config=jest.json",
+    "test:watch": "jest --watch --config=jest.json",
+    "test:coverage": "jest --config=jest.json --coverage --coverageDirectory=coverage",
+    "e2e": "jest --config=e2e/jest-e2e.json --forceExit",
+    "e2e:watch": "jest --watch --config=e2e/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^5.0.0-rc.4",
-    "@nestjs/core": "^5.0.0-rc.4",
+    "@nestjs/common": "^5.0.0",
+    "@nestjs/core": "^5.0.0",
+    "@nestjs/microservices": "^5.0.0",
     "@nestjs/mongoose": "^3.0.1",
-    "@nestjs/passport": "^1.0.6",
+    "@nestjs/passport": "^1.0.10",
+    "@nestjs/testing": "^5.0.0",
+    "@nestjs/websockets": "^5.0.0",
     "bcrypt": "^2.0.1",
-    "class-validator": "^0.8.5",
-    "grpc": "^1.10.1",
-    "mongoose": "^5.0.1",
+    "class-transformer": "^0.1.7",
+    "class-validator": "^0.8.1",
+    "jsonwebtoken": "^8.2.1",
+    "mongoose": "^5.1.0",
     "mongoose-unique-validator": "^2.0.1",
-    "mqtt": "^2.17.0",
     "passport": "^0.4.0",
-    "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
-    "redis": "^2.7.1",
-    "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.5.6",
-    "typescript": "^2.8.1"
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "^6.0.0",
+    "typescript": "^2.8.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^2.0.0",
-    "@types/express": "^4.0.39",
-    "@types/jest": "^21.1.8",
-    "@types/lodash": "^4.14.108",
-    "@types/mongoose": "^4.7.23",
-    "@types/mongoose-unique-validator": "^1.0.1",
-    "@types/node": "^9.6.14",
-    "@types/supertest": "^2.0.4",
-    "@types/ws": "^5.1.1",
-    "jest": "^21.2.1",
-    "nodemon": "^1.14.1",
-    "prettier": "^1.11.1",
+    "@types/jest": "^20.0.8",
+    "@types/mongoose": "^5.0.13",
+    "@types/node": "^7.0.41",
+    "jest": "^20.0.4",
     "supertest": "^3.0.0",
-    "ts-jest": "^21.2.4",
-    "ts-node": "^4.1.0",
-    "tsconfig-paths": "^3.1.1",
-    "tslint": "5.3.2"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "../coverage"
+    "ts-jest": "^20.0.14",
+    "ts-node": "^6.0.0",
+    "tslint": "^5.9.1"
   }
 }
