--- a/API.Points/tsconfig.json
+++ b/API.Points/tsconfig.json
@@ -12,6 +12,11 @@
     "allowJs": true,
     "outDir": "./dist"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"],
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
