--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -21,6 +21,7 @@
     "@nestjs/passport": "^1.0.10",
     "@nestjs/testing": "^5.0.0",
     "@nestjs/websockets": "^5.0.0",
+    "accesscontrol": "^2.2.1",
     "bcrypt": "^2.0.1",
     "class-transformer": "^0.1.7",
     "class-validator": "^0.8.1",
