--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -11,7 +11,8 @@
     "test:watch": "jest --watch --config=jest.json",
     "test:coverage": "jest --config=jest.json --coverage --coverageDirectory=coverage",
     "e2e": "jest --config=e2e/jest-e2e.json --forceExit",
-    "e2e:watch": "jest --watch --config=e2e/jest-e2e.json"
+    "e2e:watch": "jest --watch --config=e2e/jest-e2e.json",
+    "lint": "tslint --project tsconfig.json"
   },
   "dependencies": {
     "@nestjs/common": "^5.0.0",
