setting up sudo code for authorizing service actions

--- a/API.Points/tsconfig.json
+++ b/API.Points/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true,
     "module": "commonjs",
     "declaration": false,
     "noImplicitAny": false,
