--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.1.0",
     "mongoose-unique-validator": "^2.0.1",
+    "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/jest": "^20.0.8",
     "@types/mongoose": "^5.0.13",
+    "@types/multer": "^1.3.6",
     "@types/node": "^7.0.41",
     "jest": "^20.0.4",
     "supertest": "^3.0.0",
