--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^2.0.1",
     "class-transformer": "^0.1.7",
     "class-validator": "^0.8.1",
+    "helmet": "^3.12.1",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.1.0",
     "mongoose-unique-validator": "^2.0.1",
