--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node src/main.ts",
+    "build:prod": "tsc --sourceMap false && gulp && gulp zip",
     "prestart:prod": "tsc",
     "start:prod": "node dist/main.js",
     "test": "jest --config=jest.json",
@@ -42,6 +43,9 @@
     "@types/mongoose": "^5.0.13",
     "@types/multer": "^1.3.6",
     "@types/node": "^7.0.41",
+    "gulp": "^3.9.1",
+    "gulp-install": "^1.1.0",
+    "gulp-zip": "^4.1.0",
     "jest": "^20.0.4",
     "supertest": "^3.0.0",
     "ts-jest": "^20.0.14",
