integrating typescript with native project

--- a/Native.Points/.gitignore
+++ b/Native.Points/.gitignore
@@ -52,5 +52,10 @@ buck-out/
 */fastlane/Preview.html
 */fastlane/screenshots
 
-# Bundle artifact
-*.jsbundle
+# TypeScript
+#
+lib/
+
+# Jest
+#
+.jest/
