--- a/Native.Points/ios/ExampleProject.xcodeproj/xcshareddata/xcschemes/ExampleProject-tvOS.xcscheme
+++ b/Native.Points/ios/ExampleProject.xcodeproj/xcshareddata/xcschemes/ExampleProject-tvOS.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "Points-tvOS.app"
-               BlueprintName = "Points-tvOS"
-               ReferencedContainer = "container:Points.xcodeproj">
+               BuildableName = "ExampleProject-tvOS.app"
+               BlueprintName = "ExampleProject-tvOS"
+               ReferencedContainer = "container:ExampleProject.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "Points-tvOSTests.xctest"
-               BlueprintName = "Points-tvOSTests"
-               ReferencedContainer = "container:Points.xcodeproj">
+               BuildableName = "ExampleProject-tvOSTests.xctest"
+               BlueprintName = "ExampleProject-tvOSTests"
+               ReferencedContainer = "container:ExampleProject.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "Points-tvOSTests.xctest"
-               BlueprintName = "Points-tvOSTests"
-               ReferencedContainer = "container:Points.xcodeproj">
+               BuildableName = "ExampleProject-tvOSTests.xctest"
+               BlueprintName = "ExampleProject-tvOSTests"
+               ReferencedContainer = "container:ExampleProject.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "Points-tvOS.app"
-            BlueprintName = "Points-tvOS"
-            ReferencedContainer = "container:Points.xcodeproj">
+            BuildableName = "ExampleProject-tvOS.app"
+            BlueprintName = "ExampleProject-tvOS"
+            ReferencedContainer = "container:ExampleProject.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "Points-tvOS.app"
-            BlueprintName = "Points-tvOS"
-            ReferencedContainer = "container:Points.xcodeproj">
+            BuildableName = "ExampleProject-tvOS.app"
+            BlueprintName = "ExampleProject-tvOS"
+            ReferencedContainer = "container:ExampleProject.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "Points-tvOS.app"
-            BlueprintName = "Points-tvOS"
-            ReferencedContainer = "container:Points.xcodeproj">
+            BuildableName = "ExampleProject-tvOS.app"
+            BlueprintName = "ExampleProject-tvOS"
+            ReferencedContainer = "container:ExampleProject.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
