--- a/Native.Points/ios/ExampleProject.xcodeproj/xcshareddata/xcschemes/ExampleProject.xcscheme
+++ b/Native.Points/ios/ExampleProject.xcodeproj/xcshareddata/xcschemes/ExampleProject.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Points.app"
-               BlueprintName = "Points"
-               ReferencedContainer = "container:Points.xcodeproj">
+               BuildableName = "ExampleProject.app"
+               BlueprintName = "ExampleProject"
+               ReferencedContainer = "container:ExampleProject.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "PointsTests.xctest"
-               BlueprintName = "PointsTests"
-               ReferencedContainer = "container:Points.xcodeproj">
+               BuildableName = "ExampleProjectTests.xctest"
+               BlueprintName = "ExampleProjectTests"
+               ReferencedContainer = "container:ExampleProject.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "PointsTests.xctest"
-               BlueprintName = "PointsTests"
-               ReferencedContainer = "container:Points.xcodeproj">
+               BuildableName = "ExampleProjectTests.xctest"
+               BlueprintName = "ExampleProjectTests"
+               ReferencedContainer = "container:ExampleProject.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Points.app"
-            BlueprintName = "Points"
-            ReferencedContainer = "container:Points.xcodeproj">
+            BuildableName = "ExampleProject.app"
+            BlueprintName = "ExampleProject"
+            ReferencedContainer = "container:ExampleProject.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Points.app"
-            BlueprintName = "Points"
-            ReferencedContainer = "container:Points.xcodeproj">
+            BuildableName = "ExampleProject.app"
+            BlueprintName = "ExampleProject"
+            ReferencedContainer = "container:ExampleProject.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Points.app"
-            BlueprintName = "Points"
-            ReferencedContainer = "container:Points.xcodeproj">
+            BuildableName = "ExampleProject.app"
+            BlueprintName = "ExampleProject"
+            ReferencedContainer = "container:ExampleProject.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
