checking in a functioning react native project with typescript

--- a/Native.Points/.gitignore
+++ b/Native.Points/.gitignore
@@ -52,10 +52,5 @@ buck-out/
 */fastlane/Preview.html
 */fastlane/screenshots
 
-# TypeScript
-#
-lib/
-
-# Jest
-#
-.jest/
+# Bundle artifact
+*.jsbundle
