--- a/Native.Points/ios/myapp.xcodeproj/xcshareddata/xcschemes/myapp.xcscheme
+++ b/Native.Points/ios/myapp.xcodeproj/xcshareddata/xcschemes/myapp.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ExampleProject.app"
-               BlueprintName = "ExampleProject"
-               ReferencedContainer = "container:ExampleProject.xcodeproj">
+               BuildableName = "myapp.app"
+               BlueprintName = "myapp"
+               ReferencedContainer = "container:myapp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ExampleProjectTests.xctest"
-               BlueprintName = "ExampleProjectTests"
-               ReferencedContainer = "container:ExampleProject.xcodeproj">
+               BuildableName = "myappTests.xctest"
+               BlueprintName = "myappTests"
+               ReferencedContainer = "container:myapp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ExampleProjectTests.xctest"
-               BlueprintName = "ExampleProjectTests"
-               ReferencedContainer = "container:ExampleProject.xcodeproj">
+               BuildableName = "myappTests.xctest"
+               BlueprintName = "myappTests"
+               ReferencedContainer = "container:myapp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ExampleProject.app"
-            BlueprintName = "ExampleProject"
-            ReferencedContainer = "container:ExampleProject.xcodeproj">
+            BuildableName = "myapp.app"
+            BlueprintName = "myapp"
+            ReferencedContainer = "container:myapp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ExampleProject.app"
-            BlueprintName = "ExampleProject"
-            ReferencedContainer = "container:ExampleProject.xcodeproj">
+            BuildableName = "myapp.app"
+            BlueprintName = "myapp"
+            ReferencedContainer = "container:myapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ExampleProject.app"
-            BlueprintName = "ExampleProject"
-            ReferencedContainer = "container:ExampleProject.xcodeproj">
+            BuildableName = "myapp.app"
+            BlueprintName = "myapp"
+            ReferencedContainer = "container:myapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
