--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ExampleProject",
+  "name": "myapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,41 +7,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.3"
+    "react": "16.3.1",
+    "react-native": "0.55.4"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.2",
-    "@types/react": "^16.0.41",
-    "@types/react-native": "^0.52.19",
+    "@types/jest": "^22.2.3",
+    "@types/react": "^16.3.14",
+    "@types/react-native": "^0.55.16",
     "@types/react-test-renderer": "^16.0.1",
-    "babel-jest": "22.4.3",
+    "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
-    "jest": "22.4.3",
-    "react-addons-test-utils": "^15.6.2",
-    "react-native-mock": "^0.3.1",
-    "react-native-typescript-transformer": "^1.2.3",
-    "react-test-renderer": "^16.3.0-alpha.1",
-    "ts-jest": "^22.4.2",
-    "typescript": "^2.8.1"
+    "jest": "23.1.0",
+    "react-native-typescript-transformer": "^1.2.9",
+    "react-test-renderer": "16.3.1",
+    "typescript": "^2.9.1"
   },
   "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "testPathIgnorePatterns": [
-      "\\.snap$",
-      "<rootDir>/node_modules/",
-      "<rootDir>/lib/"
-    ],
-    "cacheDirectory": ".jest/cache"
+    "preset": "react-native"
   }
 }
