--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "Points",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,12 +8,15 @@
   },
   "dependencies": {
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-native-elements": "^0.19.1",
+    "react-native-vector-icons": "^4.6.0"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
     "@types/react": "^16.3.14",
     "@types/react-native": "^0.55.16",
+    "@types/react-native-elements": "^0.18.0",
     "@types/react-test-renderer": "^16.0.1",
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
