--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -7,13 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@points/shared": "file:../Shared.Points",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-elements": "^0.19.1",
     "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
@@ -21,6 +22,7 @@
     "@types/react-native": "^0.55.16",
     "@types/react-native-elements": "^0.18.0",
     "@types/react-test-renderer": "^16.0.1",
+    "@types/redux-saga": "^0.10.5",
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "23.1.0",
