--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -21,6 +21,8 @@
     "@types/react": "^16.3.14",
     "@types/react-native": "^0.55.16",
     "@types/react-native-elements": "^0.18.0",
+    "@types/react-redux": "^6.0.1",
+    "@types/react-router": "^4.0.26",
     "@types/react-test-renderer": "^16.0.1",
     "@types/redux-saga": "^0.10.5",
     "babel-jest": "23.0.1",
