--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -37,6 +37,7 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
+    "tamper": "^1.0.0",
     "typescript": "^2.8.0"
   },
   "devDependencies": {
