--- a/Shared.Points/package.json
+++ b/Shared.Points/package.json
@@ -1,9 +1,12 @@
 {
     "name": "@points/shared",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "private": true,
+    "main": "dist/index.js",
+    "types": "./index.d.ts",
     "dependencies": {
         "class-validator": "^0.8.1",
         "typescript": "^2.9.1"
-    }
+    },
+    "devDependencies": {}
 }
