--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -11,20 +11,25 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-elements": "^0.19.1",
+    "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "redux-subscribe-reselect": "^1.0.2",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
     "@types/react": "^16.3.14",
     "@types/react-native": "^0.55.16",
     "@types/react-native-elements": "^0.18.0",
+    "@types/react-native-loading-spinner-overlay": "^0.5.0",
     "@types/react-redux": "^6.0.1",
     "@types/react-router": "^4.0.26",
     "@types/react-test-renderer": "^16.0.1",
     "@types/redux-saga": "^0.10.5",
+    "@types/reselect": "^2.2.0",
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "23.1.0",
