--- a/Native.Points/ios/myapp.xcodeproj/xcshareddata/xcschemes/myapp.xcscheme
+++ b/Native.Points/ios/myapp.xcodeproj/xcshareddata/xcschemes/myapp.xcscheme
@@ -52,8 +52,8 @@
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedIdentifier = "Xcode.Foundation..LLDB"
+      selectedLauncherIdentifier = "Xcode.Foundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
@@ -81,8 +81,8 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedIdentifier = "Xcode.Foundation..LLDB"
+      selectedLauncherIdentifier = "Xcode.Foundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
