--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "redux-subscribe-reselect": "^1.0.2",
+    "redux-watch": "^1.1.1",
     "reselect": "^3.0.1"
   },
   "devDependencies": {
