setting up http wrapper and connecting first actual http call

--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@points/shared": "file:../Shared.Points",
+    "axios": "^0.18.0",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-elements": "^0.19.1",
@@ -21,6 +22,7 @@
     "reselect": "^3.0.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^22.2.3",
     "@types/react": "^16.3.14",
     "@types/react-native": "^0.55.16",
