--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@points/shared": "file:../Shared.Points",
     "axios": "^0.18.0",
+    "lodash": "^4.17.10",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-elements": "^0.19.1",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jest": "^22.2.3",
+    "@types/lodash": "^4.14.109",
     "@types/react": "^16.3.14",
     "@types/react-native": "^0.55.16",
     "@types/react-native-elements": "^0.18.0",
