integrating dotenv into api project

--- a/API.Points/.vscode/launch.json
+++ b/API.Points/.vscode/launch.json
@@ -16,6 +16,7 @@
             "name": "Launch Program",
             "program": "${workspaceFolder}\\src\\main.ts",
             "preLaunchTask": "tsc: build - tsconfig.json",
+            "envFile": "${workspaceFolder}/.env",
             "outFiles": [
                 "${workspaceFolder}/dist/**/*.js"
             ]
