--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -4,10 +4,10 @@
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/main.ts",
-    "build:prod": "tsc --sourceMap false && gulp && gulp zip",
+    "start": "ts-node src/main.ts --env=NODE_ENV",
+    "build:prod": "tsc --sourceMap false && gulp && gulp copyEnvProd && gulp zip",
     "prestart:prod": "tsc",
-    "prod": "npm install --only=production && node main.js",
+    "prod": "npm install --only=production && node main.js --env=NODE_ENV",
     "test": "jest --config=jest.json",
     "test:watch": "jest --watch --config=jest.json",
     "test:coverage": "jest --config=jest.json --coverage --coverageDirectory=coverage",
@@ -28,6 +28,7 @@
     "bcrypt": "^2.0.1",
     "class-transformer": "^0.1.7",
     "class-validator": "^0.8.1",
+    "dotenv": "^6.0.0",
     "gm": "^1.23.1",
     "helmet": "^3.12.1",
     "image-size": "^0.6.3",
@@ -44,6 +45,7 @@
     "typescript": "^2.8.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^4.0.3",
     "@types/gm": "^1.18.0",
     "@types/image-size": "0.0.29",
     "@types/jest": "^20.0.8",
@@ -53,6 +55,7 @@
     "@types/node": "^7.0.41",
     "gulp": "^3.9.1",
     "gulp-install": "^1.1.0",
+    "gulp-rename": "^1.3.0",
     "gulp-zip": "^4.1.0",
     "jest": "^20.0.4",
     "supertest": "^3.0.0",
