--- a/Native.Points/android/settings.gradle
+++ b/Native.Points/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'points'
+include ':react-native-config'
+project(':react-native-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-config/android')
 include ':react-native-sentry'
 project(':react-native-sentry').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sentry/android')
 include ':react-native-photo-view'
