--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -18,9 +18,9 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "native-base": "^2.5.2",
-    "react": "16.3.1",
+    "react": "16.4.1",
     "react-addons-update": "^15.6.2",
-    "react-native": "0.55.4",
+    "react-native": "0.56.0",
     "react-native-image-picker": "^0.26.7",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modalbox": "^1.5.0",
@@ -62,9 +62,11 @@
     "@types/yup": "^0.24.7",
     "babel-jest": "23.0.1",
     "babel-preset-flow": "^6.23.0",
-    "babel-preset-react-native": "4.0.0",
+    "babel-preset-react-native": "^5.0.1",
     "jest": "23.1.0",
-    "react-native-typescript-transformer": "^1.2.9",
+    "metro": "^0.43.4",
+    "react-native-config": "^0.11.5",
+    "react-native-typescript-transformer": "^1.2.10",
     "react-test-renderer": "16.3.1",
     "typescript": "^2.9.1"
   },
