getting successfull ./gradlew build with 0.59.1

--- a/Native.Points/android/app/build.gradle
+++ b/Native.Points/android/app/build.gradle
@@ -98,6 +98,9 @@ def enableProguardInReleaseBuilds = false
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
+    lintOptions {
+        lintConfig file("./lint.xml")
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
