--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -10,7 +10,7 @@
     "@points/shared": "file:../Shared.Points",
     "axios": "^0.18.0",
     "class-validator": "^0.8.5",
-    "formik": "^0.11.11",
+    "formik": "1.5.7",
     "formik-observer": "^1.0.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
@@ -19,18 +19,19 @@
     "native-base": "^2.7",
     "react": "16.8.3",
     "react-addons-update": "^15.6.2",
-    "react-native": "0.59.1",
+    "react-native": "0.59.3",
     "react-native-config": "^0.11.7",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^0.26.7",
     "react-native-loading-spinner-overlay": "^0.5.2",
-    "react-native-modalbox": "^1.5.0",
+    "react-native-modalbox": "^1.7.1",
     "react-native-permissions": "^1.1.1",
     "react-native-photo-view": "^1.5.2",
     "react-native-scrollable-tab-view": "git+https://github.com/happypancake/react-native-scrollable-tab-view.git",
     "react-native-sentry": "^0.39.0",
     "react-native-timeline-listview": "^0.2.3",
-    "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.3.1",
+    "react-native-vector-icons": "6.3.0",
+    "react-navigation": "^3.11.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
