--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -4,7 +4,7 @@
   "description": "API for Points achievement application",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/main.ts",
+    "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "build:prod": "gulp cleanDist && tsc --sourceMap false && gulp && gulp copyEnvProd && gulp zip",
     "prestart:prod": "tsc",
     "prod": "npm install --only=production && node -r dotenv/config main.js dotenv_config_path=./.env",
@@ -65,6 +65,7 @@
     "supertest": "^3.0.0",
     "ts-jest": "^20.0.14",
     "ts-node": "^6.0.0",
+    "tsconfig-paths": "^3.8.0",
     "tslint": "^5.9.1"
   }
 }
