applying global date filter to checkin aggregates

--- a/API.Points/.env.prod
+++ b/API.Points/.env.prod
@@ -4,3 +4,4 @@ PUBLIC_DIR=/public
 SECRET=8QnwdhUqb7TgebAwTwpvmBKdFgTE3bFNcDUL3DgTuFDG0
 API_INTENT_HEADER=X-Api-Intent
 OWNS_HEADER=X-Owns-Resource
+GLOBAL_YEAR_FILTER=2019
