--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -39,9 +39,10 @@
     "image-size": "^0.6.3",
     "is-image-filename": "^1.0.0",
     "jsonwebtoken": "^8.1.1",
-    "mongoose": "^5.1.0",
+    "mongoose": "^5.6.7",
     "mongoose-unique-validator": "^2.0.1",
     "multer": "^1.3.0",
+    "nestjs-typegoose": "^5.2.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
@@ -64,7 +65,6 @@
     "@types/image-size": "0.0.29",
     "@types/jest": "^20.0.8",
     "@types/lodash": "^4.14.112",
-    "@types/mongoose": "^5.0.13",
     "@types/multer": "^1.3.6",
     "@types/node": "^7.0.41",
     "gulp": "^4.0.2",
@@ -76,6 +76,7 @@
     "ts-jest": "^20.0.14",
     "ts-node": "^6.0.0",
     "tsconfig-paths": "^3.8.0",
-    "tslint": "^5.9.1"
+    "tslint": "^5.9.1",
+    "typegoose": "^5.9.0"
   }
 }
