--- a/Experimental.Points/package.json
+++ b/Experimental.Points/package.json
@@ -1,39 +1,132 @@
 {
-  "name": "experimental",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/jest": "24.0.17",
-    "@types/node": "12.7.2",
-    "@types/react": "16.9.1",
-    "@types/react-dom": "16.8.5",
-    "class-transformer": "^0.2.3",
-    "class-validator": "^0.10.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
-    "reflect-metadata": "^0.1.13",
-    "typescript": "3.5.3"
-  },
+  "name": "minimal-webpack-react",
+  "version": "2.0.0",
+  "description": "Boilerplate for react and webpack",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --open",
+    "build": "cross-env NODE_ENV=production webpack",
+    "format": "prettier --write 'packages/**/*.js'",
+    "test": "jest --watchAll --coverage"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+  "lint-staged": {
+    "*.{js,jsx,scss,css,md}": [
+      "prettier --write --single-quote",
+      "eslint --fix",
+      "git add"
     ]
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleDirectories": [
+      "src",
+      "node_modules"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "<rootDir>/__mocks__/styleMock.js",
+      "\\.(jpg|gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
+    },
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest",
+      ".+\\.(css|styl|less|sass|scss)$": "<rootDir>/node_modules/jest-css-modules-transform"
+    },
+    "setupTestFrameworkScriptFile": "<rootDir>/setupTests.js",
+    "moduleFileExtensions": [
+      "css",
+      "scss",
+      "js",
+      "json",
+      "jsx"
+    ]
+  },
+  "repository": "https://github.com/HashemKhalifa/webpack-react-boilerplate",
+  "author": "HashemKhalifa",
+  "license": "ISC",
+  "private": false,
+  "engines": {
+    "node": ">=8",
+    "npm": ">=3"
+  },
+  "dependencies": {
+    "@babel/plugin-transform-react-constant-elements": "7.5.0",
+    "@babel/plugin-transform-react-inline-elements": "7.2.0",
+    "@points/api": "file:../API.Points",
+    "@points/shared": "file:../Shared.Points",
+    "babel-plugin-transform-react-pure-class-to-function": "1.0.1",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "core-js": "3.2.1",
+    "lodash": "4.17.15",
+    "prop-types": "15.7.2",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-hot-loader": "4.12.11"
+  },
+  "resolutions": {
+    "babel-core": "7.0.0-bridge.0"
+  },
+  "devDependencies": {
+    "@babel/core": "7.5.5",
+    "@babel/plugin-proposal-class-properties": "7.5.5",
+    "@babel/plugin-proposal-decorators": "7.4.4",
+    "@babel/plugin-proposal-export-namespace-from": "7.5.2",
+    "@babel/plugin-proposal-function-sent": "7.5.0",
+    "@babel/plugin-proposal-json-strings": "7.2.0",
+    "@babel/plugin-proposal-numeric-separator": "7.2.0",
+    "@babel/plugin-proposal-throw-expressions": "7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/plugin-syntax-import-meta": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.5.5",
+    "@babel/preset-env": "7.5.5",
+    "babel-preset-react-optimize": "1.0.1",
+    "@babel/preset-react": "7.0.0",
+    "@babel/register": "7.5.5",
+    "@babel/runtime": "7.5.5",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.2",
+    "babel-jest": "24.8.0",
+    "babel-loader": "8.0.6",
+    "babel-plugin-lodash": "3.3.4",
+    "browserslist": "4.6.6",
+    "clean-webpack-plugin": "3.0.0",
+    "connect-history-api-fallback": "1.6.0",
+    "cross-env": "5.2.0",
+    "css-loader": "3.2.0",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.14.0",
+    "eslint": "6.1.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-loader": "2.2.1",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jest": "22.15.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-react": "7.14.3",
+    "eslint-watch": "6.0.0",
+    "file-loader": "4.2.0",
+    "koa-connect": "2.0.1",
+    "html-webpack-plugin": "3.2.0",
+    "script-ext-html-webpack-plugin": "2.1.4",
+    "husky": "3.0.3",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "24.8.0",
+    "jest-css-modules-transform": "2.5.0",
+    "jest-enzyme": "7.1.0",
+    "jest-fetch-mock": "2.1.2",
+    "jsdom": "15.1.1",
+    "lint-staged": "9.2.1",
+    "mini-css-extract-plugin": "0.8.0",
+    "node-sass": "4.12.0",
+    "npm-check-updates": "3.1.21",
+    "prettier": "1.18.2",
+    "pretty-quick": "1.11.1",
+    "sass-loader": "7.2.0",
+    "style-loader": "1.0.0",
+    "webpack": "4.39.2",
+    "webpack-cli": "3.3.6",
+    "webpack-dev-server": "3.8.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "terser-webpack-plugin": "1.4.1",
+    "webpack-merge": "4.2.1"
   }
 }
