API.Points: adding debug config for ts-node/nest/vscode

--- a/API.Points/.vscode/launch.json
+++ b/API.Points/.vscode/launch.json
@@ -7,11 +7,18 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
-      "program": "${workspaceFolder}\\src\\main.ts",
-      "preLaunchTask": "tsc: build - tsconfig.json",
-      // "envFile": "${workspaceFolder}/.env",
-      "outFiles": ["${workspaceFolder}/dist/**/*.js"]
+      "name": "Debug Nest Framework",
+      "args": [
+        "${workspaceFolder}/src/main.ts"
+      ],
+      "runtimeArgs": [
+        "--nolazy",
+        "-r",
+        "ts-node/register"
+      ],
+      "sourceMaps": true,
+      "cwd": "${workspaceRoot}",
+      "protocol": "inspector"
     }
   ]
 }
