successful ./gradlew build with RN@0.60.0

--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
     "@points/shared": "file:../Shared.Points",
+    "@react-native-community/viewpager": "3.3.0",
+    "@sentry/react-native": "^1.4.5",
     "axios": "^0.19.0",
     "class-validator": "^0.8.5",
     "formik": "1.5.7",
@@ -17,18 +19,17 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "native-base": "^2.7",
-    "react": "16.8.3",
+    "react": "16.8.6",
     "react-addons-update": "^15.6.2",
-    "react-native": "0.59.3",
+    "react-native": "0.60.0",
     "react-native-config": "^0.11.7",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-image-picker": "^0.26.7",
+    "react-native-gesture-handler": "1.6.1",
+    "react-native-image-picker": "^1.0.1",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modalbox": "^1.7.1",
     "react-native-permissions": "^1.1.1",
-    "react-native-photo-view": "git+https://github.com/tomtom94/react-native-photo-view.git",
-    "react-native-scrollable-tab-view": "git+https://github.com/happypancake/react-native-scrollable-tab-view.git",
-    "react-native-sentry": "^0.39.0",
+    "react-native-photo-view-ex": "github:a-chess/react-native-photo-view-ex#ca9e0847f1e24614e4a795b1ebf61143be732905",
+    "react-native-scrollable-tab-view": "github:ptomasroos/react-native-scrollable-tab-view#1371236e91c217e2f42468e355419f83410e3133",
     "react-native-timeline-listview": "^0.2.3",
     "react-native-vector-icons": "6.3.0",
     "react-navigation": "^3.11.0",
@@ -41,9 +42,9 @@
     "yup": "^0.26.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
     "@types/axios": "^0.14.0",
-    "@babel/core": "^7.4.3",
-    "@babel/runtime": "^7.4.3",
     "@types/jest": "^23.3.1",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.109",
@@ -63,12 +64,13 @@
     "@types/redux-saga": "^0.10.5",
     "@types/reselect": "^2.2.0",
     "@types/yup": "^0.24.7",
+    "babel-jest": "^24.8.0",
+    "jest": "^24.8.0",
+    "jetifier": "^1.6.6",
+    "metro-react-native-babel-preset": "^0.55.0",
+    "react-test-renderer": "16.8.6",
     "ts-jest": "^23.1.4",
-    "typescript": "^3.5.2",
-    "babel-jest": "^24.7.1",
-    "jest": "^24.7.1",
-    "metro-react-native-babel-preset": "^0.53.1",
-    "react-test-renderer": "16.8.3"
+    "typescript": "^3.5.2"
   },
   "jest": {
     "preset": "react-native",
