--- a/Native.Points/android/settings.gradle
+++ b/Native.Points/android/settings.gradle
@@ -1,6 +1,5 @@
 rootProject.name = 'Points'
+include ':react-native-config'
+project(':react-native-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-config/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
-
-// include ':sentry_react-native'
-// project(':sentry_react-native').projectDir = new File(rootProject.projectDir, '../node_modules/@sentry/react-native/android')
 include ':app'
