--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@isitha/react-native-timeline-listview": "^0.2.3",
     "@points/shared": "file:../Shared.Points",
     "@react-native-community/viewpager": "3.3.0",
     "@sentry/react-native": "^1.4.5",
@@ -18,19 +19,19 @@
     "lodash": "^4.17.13",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
-    "native-base": "^2.7",
+    "native-base": "^2.13.12",
     "react": "16.8.6",
     "react-addons-update": "^15.6.2",
     "react-native": "0.60.0",
-    "react-native-config": "^0.11.7",
+    "react-native-config": "^1.2.1",
     "react-native-gesture-handler": "1.6.1",
     "react-native-image-picker": "^1.0.1",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modalbox": "^1.7.1",
     "react-native-permissions": "^1.1.1",
+    "react-native-photo-gallery": "^0.2.3",
     "react-native-photo-view-ex": "github:a-chess/react-native-photo-view-ex#ca9e0847f1e24614e4a795b1ebf61143be732905",
     "react-native-scrollable-tab-view": "github:ptomasroos/react-native-scrollable-tab-view#1371236e91c217e2f42468e355419f83410e3133",
-    "react-native-timeline-listview": "^0.2.3",
     "react-native-vector-icons": "6.3.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^5.0.7",
