upgrading ios and archiving ipa with RN@0.60.0

--- a/Native.Points/android/gradle.properties
+++ b/Native.Points/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
+UPLOAD_STORE_FILE=points.keystore
+UPLOAD_KEY_ALIAS=points-alias
+UPLOAD_STORE_PASSWORD=password
+UPLOAD_KEY_PASSWORD=password
