--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -24,11 +24,11 @@
     "react-addons-update": "^15.6.2",
     "react-native": "0.60.0",
     "react-native-config": "^1.2.1",
-    "react-native-gesture-handler": "1.6.1",
+    "react-native-gesture-handler": "~1.4.0",
     "react-native-image-picker": "^1.0.1",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-modalbox": "^1.7.1",
-    "react-native-permissions": "^1.1.1",
+    "react-native-permissions": "^2.1.5",
     "react-native-photo-browser": "^0.7.0",
     "react-native-photo-view-ex": "github:a-chess/react-native-photo-view-ex#ca9e0847f1e24614e4a795b1ebf61143be732905",
     "react-native-scrollable-tab-view": "^1.0.0",
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
+    "@bam.tech/react-native-make": "^3.0.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^23.3.1",
     "@types/jwt-decode": "^2.2.1",
