--- a/Native.Points/ios/points.xcodeproj/xcshareddata/xcschemes/points-tvOS.xcscheme
+++ b/Native.Points/ios/points.xcodeproj/xcshareddata/xcschemes/points-tvOS.xcscheme
@@ -52,8 +52,8 @@
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
-      selectedIdentifier = "Xcode.Foundation..LLDB"
-      selectedLauncherIdentifier = "Xcode.Foundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
@@ -82,8 +82,8 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedIdentifier = "Xcode.Foundation..LLDB"
-      selectedLauncherIdentifier = "Xcode.Foundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
