refactoring uploads (tested on android)

--- a/Native.Points/ios/Podfile
+++ b/Native.Points/ios/Podfile
@@ -2,7 +2,11 @@ platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 target 'Points' do
+  permissions_path = '../node_modules/react-native-permissions/ios'
+
   # Pods for pod
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera.podspec"
+
   pod 'React', :path => '../node_modules/react-native/'
   pod 'React-Core', :path => '../node_modules/react-native/React'
   pod 'React-DevSupport', :path => '../node_modules/react-native/React'
