--- a/Native.Points/android/app/src/main/AndroidManifest.xml
+++ b/Native.Points/android/app/src/main/AndroidManifest.xml
@@ -2,8 +2,11 @@
   package="com.points">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />  
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
+      android:largeHeap="true"
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
