adding the ability to update achievements via the seed method

--- a/API.Points/.vscode/launch.json
+++ b/API.Points/.vscode/launch.json
@@ -16,6 +16,7 @@
         "-r",
         "ts-node/register"
       ],
+      "console": "integratedTerminal",
       "sourceMaps": true,
       "cwd": "${workspaceRoot}",
       "protocol": "inspector"
