--- a/API.Points/package.json
+++ b/API.Points/package.json
@@ -29,7 +29,7 @@
     "@nestjs/websockets": "^6.0.1",
     "@points/shared": "file:../Shared.Points",
     "accesscontrol": "^2.2.1",
-    "bcrypt": "^2.0.1",
+    "bcrypt": "5.0.0",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "del": "^3.0.0",
