--- a/Native.Points/package.json
+++ b/Native.Points/package.json
@@ -20,22 +20,27 @@
     "lodash": "^4.17.13",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
-    "native-base": "^2.13.12",
-    "react": "16.8.6",
+    "native-base": "^2.13.14",
+    "react": "16.13.1",
     "react-addons-update": "^15.6.2",
-    "react-native": "0.60.0",
+    "react-native": "0.63.2",
     "react-native-config": "^1.2.1",
-    "react-native-fast-image": "^8.1.5",
-    "react-native-gesture-handler": "~1.4.0",
+    "react-native-fast-image": "^8.2.0",
+    "react-native-gesture-handler": "^1.8.0",
     "react-native-image-picker": "^1.0.1",
     "react-native-loading-spinner-overlay": "^0.5.2",
-    "react-native-modalbox": "^1.7.1",
+    "react-native-modalbox": "2.0.0",
     "react-native-permissions": "^2.1.5",
     "react-native-photo-browser": "^0.7.0",
     "react-native-photo-view-ex": "github:a-chess/react-native-photo-view-ex#ca9e0847f1e24614e4a795b1ebf61143be732905",
+    "react-native-reanimated": "^1.13.0",
+    "react-native-screens": "^2.10.1",
     "react-native-scrollable-tab-view": "^1.0.0",
-    "react-native-vector-icons": "6.3.0",
-    "react-navigation": "^3.11.0",
+    "react-native-vector-icons": "7.0.0",
+    "react-navigation": "^4.4.0",
+    "react-navigation-drawer": "^1.4.0",
+    "react-navigation-stack": "^1.7.3",
+    "react-navigation-tabs": "^1.2.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
@@ -45,8 +50,8 @@
     "yup": "^0.26.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/runtime": "^7.5.5",
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
     "@bam.tech/react-native-make": "^3.0.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^23.3.1",
@@ -58,7 +63,7 @@
     "@types/react-addons-update": "^0.14.19",
     "@types/react-native": "^0.56.15",
     "@types/react-native-loading-spinner-overlay": "^0.5.0",
-    "@types/react-native-modalbox": "^1.4.6",
+    "@types/react-native-modalbox": "1.4.8",
     "@types/react-native-permissions": "^1.1.1",
     "@types/react-native-scrollable-tab-view": "^0.8.1",
     "@types/react-navigation": "^2.0.6",
@@ -68,11 +73,11 @@
     "@types/redux-saga": "^0.10.5",
     "@types/reselect": "^2.2.0",
     "@types/yup": "^0.24.7",
-    "babel-jest": "^24.8.0",
-    "jest": "^24.8.0",
+    "babel-jest": "^25.1.0",
+    "jest": "^25.1.0",
     "jetifier": "^1.6.6",
-    "metro-react-native-babel-preset": "^0.55.0",
-    "react-test-renderer": "16.8.6",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1",
     "ts-jest": "^23.1.4",
     "typescript": "^3.5.2"
   },
