Native.Points: - updating react-native-image-picker and axios - fixing issue with Android 10 by adding requestLegactExternalStorage - implementing deletion when selecting item from feed - removing need to return base64 encoding from camera - idea config

--- a/Native.Points/ios/points/Info.plist
+++ b/Native.Points/ios/points/Info.plist
@@ -53,6 +53,8 @@
 	<string>${PRODUCT_NAME} requires access to your phone's location when in use</string>
 	<key>NSMotionUsageDescription</key>
 	<string>${PRODUCT_NAME} requires access to your phone's motion sensor</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>${PRODUCT_NAME} requires access to your phone's photo library</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>${PRODUCT_NAME} requires access to your phone’s photo library.</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
