--- a/Native.Points/android/app/src/main/AndroidManifest.xml
+++ b/Native.Points/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="true"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+        android:requestLegacyExternalStorage="true">
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
